--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ant-design/nextjs-registry": "^1.2.0",
     "antd": "^6.0.0",
     "next": "16.0.3",
     "react": "19.2.0",
