--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/nextjs-registry": "^1.2.0",
     "antd": "^6.0.0",
     "next": "16.0.3",
+    "next-auth": "^4.24.13",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "zustand": "^5.0.8"
